# get_gl_version

./: CMakeLists.txt  README.md  build.sh
src/: get_gl_version.cpp
